--- a/WebResumen/Views/Shared/_LayoutInicio.cshtml
+++ b/WebResumen/Views/Shared/_LayoutInicio.cshtml
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/examplec.css" />
- 
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
@@ -18,17 +18,10 @@
     <link href="~/lib/MDB/css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="~/lib/MDB/css/style.css" rel="stylesheet">
+
+    <!-- Datatable -->
+    <link rel="stylesheet" href="~/css/Datatable/buttons.dataTables.min.css" />
   
-
-    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css">
-
- 
-
-
-
-
-
-
 
 
 
@@ -148,64 +141,55 @@
         <div class="footer-copyright text-center py-3">
             &copy; 2020 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a>
         </div>
-        <!-- Copyright -->
-
+      
     </footer>
-    <!--<footer class="border-top footer text-muted footer-copyright text-center py-3 ">-->
-    @*&copy; 2020 - WebResumen - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
-    @*&copy; 2020 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a>*@
+
 
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
-
-
-
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/libraries/jquery.dataTables.js"></script>
+       
 
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="/lib/MDB/js/bootstrap.min.js"></script>
+
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="/lib/MDB/js/mdb.min.js"></script>
-
     <script type="text/javascript" src="~/lib/MDB/js/addons/datatables.min.js"></script>
     <script type="text/javascript" src="~/lib/DataTables/datatables.min.js"></script>
+
     <!-- Angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="~/lib/libraries/AnguLib/angular.min.js"></script>
 
     <!-- Datatable -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-datatables/0.6.4/angular-datatables.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.4/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.colVis.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.flash.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.print.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-datatables/0.6.4/plugins/buttons/angular-datatables.buttons.min.js"></script>
+    <script src="~/lib/libraries/DataTable/angular-datatables.js"></script>
+    <script src="~/lib/libraries/DataTable/dataTables.buttons.min.js"></script>
+    <script src="~/lib/libraries/DataTable/buttons.colVis.min.js"></script>
+    <script src="~/lib/libraries/DataTable/buttons.flash.min.js"></script>
+    <script src="~/lib/libraries/DataTable/buttons.html5.min.js"></script>
+    <script src="~/lib/libraries/DataTable/buttons.print.min.js"></script>
+    <script src="~/lib/libraries/DataTable/angular-datatables.buttons.min.js"></script>
 
-    <!-- Excel-PDF-Copy -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.18/pdfmake.min.js"></script>
-    <script src="https://cdn.datatables.net/colreorder/1.5.3/js/dataTables.colReorder.min.js"></script>
-
-
+     <!-- Excel-PDF-Copy -->
+    <script src="~/lib/libraries/ExcLib/jszip.min.js"></script>
+    <script src="~/lib/libraries/ExcLib/pdfmake.min.js"></script>
+    <script src="~/lib/libraries/ExcLib/dataTables.colReorder.min.js"></script>
+   
     <!-- Interno -->
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/homeApp.js" asp-append-version="true"></script>
     <script src="~/js/vaporApp.js" asp-append-version="true"></script>
     <script src="~/js/aguaApp.js" asp-append-version="true"></script>
-   
+
 
 
     @*<script src="~/js/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
-    <script src="~/js/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
-    <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>*@
-
-
-
-
-
+        <script src="~/js/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
+        <script src="~/js/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>*@
 
 
 
