--- a/WebResumen/wwwroot/css/examplec.css
+++ b/WebResumen/wwwroot/css/examplec.css
@@ -31,6 +31,14 @@ table, th, td {
     float: left;
 }
 
+@page {
+    margin: .25in;
+
+    @bottom-right {
+        content: counter(page) " / " counter(pages);
+    }
+}
+
 
     /*
 .wrap {
