--- a/WebResumen/Views/Home/Index.cshtml
+++ b/WebResumen/Views/Home/Index.cshtml
@@ -39,6 +39,18 @@
 
 }
 
+@if (TempData["Bloqueo"] != null)
+{
+
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>@TempData["Bloqueo"].ToString()!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+}
+
 <div class="container justify-content-center mt-5">
     <h5 class="justify-content-center">Login de Usuario</h5>
     <div class="row">
