--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
     @*<link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/css/jquery.dataTables.css" />*@
 
 
-
+    <link rel="stylesheet" href="~/css/print.min.css" />
 
 
 
@@ -214,6 +214,8 @@
     <script src="~/js/vaporApp.js" asp-append-version="true"></script>
     <script src="~/js/aguaApp.js" asp-append-version="true"></script>
     <script src="~/js/AudiTrailApp.js" asp-append-version="true"></script>
+
+    <script src="~/js/print.min.js" asp-append-version="true"></script>
 
 
 
