--- a/WebResumen/Views/AutoClaveA/Index.cshtml
+++ b/WebResumen/Views/AutoClaveA/Index.cshtml
@@ -11,12 +11,27 @@
 @if (TempData["Print"] != null)
 {
 
+
+
+    @*<button type="button" onclick="printJS({printable:'docs/archivo.pdf', type:'pdf', showModal:true})">
+            Imprima aquí!
+        </button>*@
+
+    @*<body onload=" printJS({printable:'docs/archivo.pdf', type:'pdf', showModal:true})">
+
+        </body>*@
+
+
+    @*<script src="~/js/printActive.js" asp-append-version="true"></script>*@
+
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>@TempData["Print"].ToString()!</strong>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+
+
 
 }
 
@@ -464,29 +479,28 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.FechaRegistro)
                             </td>*@
-                    <td>
-                        @using Microsoft.AspNetCore.Authorization
-                        @inject IAuthorizationService AuthorizationService
-                        @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
-                        {
+                        <td>
+                            @*@using Microsoft.AspNetCore.Authorization
+                                @inject IAuthorizationService AuthorizationService
+                                @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+                                {*@
                             <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Vista</a>
                             <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">Print</a>
-                        }
-                        else
-                        {
-                            <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Vista</a>
-                            <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">PrintS</a>
-                        }
+                            @*}*@
+                            @*else
+                                {
+                                    <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Vista</a>
+                                    <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">PrintS</a>
+                                }*@
 
 
 
-                    </td>
+                        </td>
                     </tr>
                 }
             </tbody>
         </table>
     </div>
-
 
 
 
