--- a/WebResumen/Views/AutoClaveA/Print.cshtml
+++ b/WebResumen/Views/AutoClaveA/Print.cshtml
@@ -16,26 +16,45 @@
     @inject IAuthorizationService AuthorizationService
     @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
     {
-        <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")">Imprimir</a>
+    <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")">Imprimir</a>
     }
     else
+        {
+    <div class="form-group">
+
+        @*@Html.DropDownList("ImpresoraNombre", new SelectList(ViewBag.impresoras, "--seleccionar--"))*@
+        <a type="button" class="btn btn-success"   asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")">ImprimirAS</a>
+
+    </div>
+    @*@foreach (var person in ViewBag.impresoras)
     {
-<div class="form-group">
 
-    @Html.DropDownList("ImpresoraNombre", new SelectList(ViewBag.impresoras, "--seleccionar--"))
-    <a type="submit" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")">ImprimirAS</a>
+        <h1>@person</h1>
 
-</div>
-            @*@foreach (var person in ViewBag.impresoras)
-                {
+    }*@
 
-                    <h1>@person</h1>
+    }
 
-                }*@
+</tbody>
 
-            }
+@*<input type="button" value="Print this page" onclick="PrintMe()" />
 
-    </tbody>
+    <script>
+        function PrintMe() {
+            window.print();
+        }
+
+    </script>*@
+
+@*<input type="button" value="Print this page" onclick="PrintMe()" />
+
+<script>
+    function PrintMe() {
+        window.open('C:\archivo.pdf', "resizeable,scrollbar");
+        //window.print();
+    }
+
+</script>*@
 
 
 
@@ -74,31 +93,31 @@
 
 
 @*<body ng-app="my-autoclaves" ng-controller="autoclave-controller">
-    <div class="spinner-border text-primary" role="status" ng-show="loading">
-            <span class="sr-only">Loading...</span>
-        </div>
+        <div class="spinner-border text-primary" role="status" ng-show="loading">
+                <span class="sr-only">Loading...</span>
+            </div>
 
-        <div class="alert alert-warning alert-dismissable" role="alert" ng-if="send"
-             dismiss-on-timeout="1000">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            El archivo ha sido enviado a la impresora!
-        </div>
+            <div class="alert alert-warning alert-dismissable" role="alert" ng-if="send"
+                 dismiss-on-timeout="1000">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                El archivo ha sido enviado a la impresora!
+            </div>
 
-        <div class="alert alert-success alert-dismissable" role="alert" ng-if="received">
-            <button type="button" dismiss-on-timeout='1000' class="close" data-dismiss="alert">&times;</button>
-            El archivo ha sido impreso!
-        </div>
+            <div class="alert alert-success alert-dismissable" role="alert" ng-if="received">
+                <button type="button" dismiss-on-timeout='1000' class="close" data-dismiss="alert">&times;</button>
+                El archivo ha sido impreso!
+            </div>
 
-    @using Microsoft.AspNetCore.Http
-    @inject IHttpContextAccessor httpContextAccessor
-    <h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")</h1>
-
-
-
-    <button href="#" type="button" value="submit" class="btn btn-success" ng-click="imprimir(@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA"))">Imprimir</button>
-
-   
+        @using Microsoft.AspNetCore.Http
+        @inject IHttpContextAccessor httpContextAccessor
+        <h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA")</h1>
 
 
 
-</body>*@
+        <button href="#" type="button" value="submit" class="btn btn-success" ng-click="imprimir(@httpContextAccessor.HttpContext.Session.GetString("SessionDatosA"))">Imprimir</button>
+
+
+
+
+
+    </body>*@
