--- a/WebResumen/Views/AutoClaveC/Print.cshtml
+++ b/WebResumen/Views/AutoClaveC/Print.cshtml
@@ -13,11 +13,22 @@
 
     @using Microsoft.AspNetCore.Http
     @inject IHttpContextAccessor httpContextAccessor
+    @using Microsoft.AspNetCore.Authorization
+    @inject IAuthorizationService AuthorizationService
     @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")</h1>*@
+    @*<a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")">Imprimir</a>*@
 
 
-    <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")">Imprimir</a>
+    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    {
+        <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")">Imprimir</a>
 
+    }
+    else
+    {
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")">ImprimirAS</a>
+
+    }
 
 </tbody>
 
