--- a/WebResumen/Views/AutoClaveM/Print.cshtml
+++ b/WebResumen/Views/AutoClaveM/Print.cshtml
@@ -14,9 +14,25 @@
     @using Microsoft.AspNetCore.Http
     @inject IHttpContextAccessor httpContextAccessor
     @*<h1>@httpContextAccessor.HttpContext.Session.GetString("SessionDatosC")</h1>*@
+    @using Microsoft.AspNetCore.Authorization
+    @inject IAuthorizationService AuthorizationService
+    @*<a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosM")">Imprimir</a>*@
+
+    @if ((await AuthorizationService.AuthorizeAsync(User, "ADUsers")).Succeeded)
+    {
+
+        <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosM")">Imprimir</a>
 
 
-    <a type="button" class="btn btn-success" asp-action="Print" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosM")">Imprimir</a>
+    }
+    else
+    {
+
+        <a type="button" class="btn btn-success" asp-action="PrintAS" asp-route-id="@httpContextAccessor.HttpContext.Session.GetString("SessionDatosM")">ImprimirAS</a>
+
+
+    }
+
 
 
 </tbody>
