--- a/WebResumen/Views/Shared/_LayoutInicio.cshtml
+++ b/WebResumen/Views/Shared/_LayoutInicio.cshtml
@@ -21,7 +21,7 @@
 
     <!-- Datatable -->
     <link rel="stylesheet" href="~/css/Datatable/buttons.dataTables.min.css" />
-  
+    <link rel="stylesheet" href="~/css/print.min.css" />
 
 
 
@@ -141,7 +141,7 @@
         <div class="footer-copyright text-center py-3">
             &copy; 2020 Copyright - <a asp-area="" asp-controller="Home" asp-action="Privacy">Baxter</a>
         </div>
-      
+
     </footer>
 
 
@@ -151,7 +151,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/libraries/jquery.dataTables.js"></script>
-       
+
 
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="/lib/MDB/js/bootstrap.min.js"></script>
@@ -173,17 +173,19 @@
     <script src="~/lib/libraries/DataTable/buttons.print.min.js"></script>
     <script src="~/lib/libraries/DataTable/angular-datatables.buttons.min.js"></script>
 
-     <!-- Excel-PDF-Copy -->
+    <!-- Excel-PDF-Copy -->
     <script src="~/lib/libraries/ExcLib/jszip.min.js"></script>
     <script src="~/lib/libraries/ExcLib/pdfmake.min.js"></script>
     <script src="~/lib/libraries/ExcLib/dataTables.colReorder.min.js"></script>
-   
+
     <!-- Interno -->
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/homeApp.js" asp-append-version="true"></script>
     <script src="~/js/vaporApp.js" asp-append-version="true"></script>
     <script src="~/js/aguaApp.js" asp-append-version="true"></script>
+
+    <script src="~/js/print.min.js" asp-append-version="true"></script>
 
 
 
