--- a/WebResumen/Views/Shared/_LayoutInicio.cshtml
+++ b/WebResumen/Views/Shared/_LayoutInicio.cshtml
@@ -65,8 +65,8 @@
 
 
                             @*<li class="nav-item">
-                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                                </li>*@
+             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </li>*@
                             else
                             {
 
@@ -103,6 +103,10 @@
                                     }
                                 }
                             }
+                            <li class="nav-item">
+                                <a><mark><span id="SecondsUntilExpire"></span></mark></a>
+
+                            </li>
                         }
 
                     </ul>
@@ -111,13 +115,14 @@
 
 
             <ul class="navbar-nav ml-auto">
+              
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                 </li>
                 <li class="nav-item">
                     @*<p class="float-right navbar-text navbar-right text-danger">Hola, <strong>@User.Identity.Name.Replace("GLOBAL\\", "")!</strong> </p>*@
 
-
+                   
                     @inject IHttpContextAccessor httpContextAccessor
                     <p class=" navbar-text text-danger">Hola, <strong> @httpContextAccessor.HttpContext.Session.GetString("SessionUser")!</strong> </p>
                 </li>
@@ -186,6 +191,7 @@
     <script src="~/js/aguaApp.js" asp-append-version="true"></script>
 
     <script src="~/js/print.min.js" asp-append-version="true"></script>
+    <script src="~/js/TimeOut/TimeOut.js"></script>
 
 
 
