--- a/WebResumen/Views/Inicio/Index.cshtml
+++ b/WebResumen/Views/Inicio/Index.cshtml
@@ -10,13 +10,16 @@
 }
 
 
+
+
+
 <div class="text-center">
     <h1 class="">Autoclaves Baxter Sabiñánigo</h1>
 
-   
+
 </div>
 
-
+@*You will be auto logged out in <span id="SecondsUntilExpire"></span> seconds.*@
 
 
 
@@ -27,7 +30,7 @@
 
 
 
-  
+
     <div class="row mb-2">
         <div class="col-md-6">
             <h4 class="text-center font-weight-bold">SABI I</h4>
@@ -156,7 +159,7 @@
             </table>
         </div>
 
-        
+
         <div class="col-md-6">
             <h4 class="text-center font-weight-bold">SABI II</h4>
             <table class="table table-sm ">
@@ -210,6 +213,118 @@
             </table>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
