--- a/WebResumen/Views/Shared/_LayoutInicio.cshtml
+++ b/WebResumen/Views/Shared/_LayoutInicio.cshtml
@@ -65,8 +65,8 @@
 
 
                             @*<li class="nav-item">
-                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                                </li>*@
+                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>*@
                             else
                             {
 
@@ -108,9 +108,15 @@
                     </ul>
                 </div>
             </div>
-
-
+            
+            <div class="panel panel-default">
+                <div style="color:white" class="panel-heading">ghfdhgfdgh</div>
+                <div class="panel-body">
+                    <span style="color:black;background:yellow;font-weight:bold" id="SecondsUntilExpire"></span>
+                </div>
+            </div>
             <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                 </li>
@@ -121,6 +127,7 @@
                     @inject IHttpContextAccessor httpContextAccessor
                     <p class=" navbar-text text-danger">Hola, <strong> @httpContextAccessor.HttpContext.Session.GetString("SessionUser")!</strong> </p>
                 </li>
+
             </ul>
         </nav>
 
@@ -151,7 +158,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/libraries/jquery.dataTables.js"></script>
-
+    <script src="~/js/TimeOut/TimeOut.js"></script>
 
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="/lib/MDB/js/bootstrap.min.js"></script>
