--- a/WebResumen/Views/Parametro/Edit.cshtml
+++ b/WebResumen/Views/Parametro/Edit.cshtml
@@ -39,6 +39,11 @@
                 <span asp-validation-for="Tiempo" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Tsesion" class="control-label"></label>
+                <input asp-for="Tsesion" class="form-control" value="@httpContextAccessor.HttpContext.Session.GetInt32("TiempoS")" />
+                <span asp-validation-for="Tsesion" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 @*<label asp-for="Reinicio" class="control-label"></label>*@
                 <input asp-for="Reinicio" class="form-control" value=true type="hidden" />
                 @*<span asp-validation-for="Reinicio" class="text-danger"></span>*@
