--- a/WebResumen/Views/Parametro/Index.cshtml
+++ b/WebResumen/Views/Parametro/Index.cshtml
@@ -25,9 +25,12 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Tiempo)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Tsesion)
+                </th>
                 @*<th>
-                    @Html.DisplayNameFor(model => model.Reinicio)
-                </th>*@
+            @Html.DisplayNameFor(model => model.Reinicio)
+        </th>*@
                 <th>
                     Acciones
                 </th>
@@ -37,30 +40,33 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ImpresoraSabiUno)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ImpresoraSabiDos)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RutaLog)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Tiempo)
-                    </td>
-                    @*<td>
-                        @Html.DisplayFor(modelItem => item.Reinicio)
-                    </td>*@
-                    <td>
-                        @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
-                        <a type="button" class="btn btn-success btn-sm" asp-action="Login" asp-route-id="@item.Id">Edit</a>
-                        @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-                    </td>
-                </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ImpresoraSabiUno)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ImpresoraSabiDos)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RutaLog)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tiempo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tsesion)
+                </td>
+                @*<td>
+            @Html.DisplayFor(modelItem => item.Reinicio)
+        </td>*@
+                <td>
+                    @*<a class="btn btn-success btn-sm text-white" asp-action="Edit" asp-route-id="@item.Id">Editar</a>*@
+                    <a type="button" class="btn btn-success btn-sm" asp-action="Login" asp-route-id="@item.Id">Edit</a>
+                    @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+                </td>
+            </tr>
             }
         </tbody>
     </table>
